# Piscis

./: .gitattributes  LICENSE  README.md  pyproject.toml
docs/source/: cli.rst  conf.py  getting_started.rst  index.rst  inference.rst  installation.rst  training.rst
docs/source/_static/: custom.css
notebooks/: run_piscis.ipynb  train_piscis.ipynb
paper/: README.md
paper/0_generate_datasets/: generate_dataset.ipynb
paper/1_download_datasets/: download_datasets.ipynb
paper/2_train_piscis/: train_piscis.ipynb
paper/3_train_deepblink/: train_deepblink.ipynb
paper/4_benchmark_piscis/: benchmark_piscis.ipynb
paper/5_benchmark_deepblink/: benchmark_deepblink.ipynb
paper/6_benchmark_trackmate/: benchmark_trackmate.ipynb
paper/7_benchmark_rs_fish/: benchmark_rs_fish.ipynb
paper/8_generate_results/: benchmark_piscis_runtime.ipynb
paper/8_generate_results/autofluorescence/: 20220214_162350_947__ChannelDAPI,YFP,YFPa,CY3,CY3a,A594,A594a,CY5,CY5a,Brightfield_Seq0001.json  20220214_162350_947__ChannelDAPI,YFP,YFPa,CY3,CY3a,A594,A594a,CY5,CY5a,Brightfield_Seq0001.nc  20220214_162350_947__ChannelDAPI,YFP,YFPa,CY3,CY3a,A594,A594a,CY5,CY5a,Brightfield_Seq0001.tif
paper/outputs/benchmarks/: deepblink_f1s.json  piscis_bce_f1s.json  piscis_dice_f1s.json  piscis_f1s.json  piscis_focal_f1s.json  piscis_train_dice.json  piscis_train_offset_dices.json  piscis_train_offset_smoothf1s.json  piscis_train_smoothf1.json  rs_fish_f1s.json  trackmate_f1s.json
paper/outputs/deepblink_models/: 231019_030132_20230905_cell_size_1.h5  231019_030152_20230905_cell_size_2.h5  231019_030223_20230905_cell_size_4.h5
paper/outputs/panels/: autofluorescence_f1s.json  example_f1s.json  example_rs_fish_parameter_grid_f1s.json  example_trackmate_parameter_grid_f1s.json
piscis/: __init__.py  __main__.py  convert.py  core.py  data.py  downloads.py  fitting.py  losses.py  metrics.py  optimizers.py  paths.py  piscis.py  training.py  transforms.py  utils.py
piscis/models/: baseline.py  spots.py
piscis/networks/: conv.py  efficientnetv2.py  efficientnetv2_defaults.py  fpn.py
