[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'Piscis'
version = '0.1.0'
description = "An automatic deep learning algorithm for spot detection in fluorescence microscopy images."
readme = 'README.md'
requires-python = '>=3.7, <4'
authors = [
    {email = 'wniu721@gmail.com'},
    {name = 'William Niu'}
]
keywords = ['machine learning', 'deep learning', 'spot detection', 'fluorescence microscopy']
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python'
]
dependencies = [
    'deeptile',
    'flax',
    'huggingface-hub',
    'imageio',
    'numba',
    'numpy',
    'opencv-python',
    'pandas',
    'scikit-image',
    'scipy',
    'tqdm',
    'xarray'
]

[project.scripts]
piscis = 'piscis.__main__:main'

[tool.setuptools]
packages = ['piscis', 'piscis.models', 'piscis.networks']

[tool.setuptools.package-data]
piscis = ['trained_models/*']
