[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'Piscis'
version = '1.0.0'
description = "An automatic deep learning algorithm for spot detection in fluorescence microscopy images."
readme = 'README.md'
requires-python = '>=3.7, <4'
authors = [
    {email = 'wniu721@gmail.com'},
    {name = 'William Niu'}
]
keywords = ['machine learning', 'deep learning', 'spot detection', 'fluorescence microscopy']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python'
]
dependencies = [
    'deeptile',
    'huggingface-hub',
    'imageio',
    'numba',
    'numpy',
    'opencv-python',
    'pandas',
    'scikit-image',
    'scipy',
    'torch',
    'tqdm',
    'xarray'
]

[project.scripts]
piscis = 'piscis.__main__:main'

[tool.setuptools]
packages = ['piscis', 'piscis.models', 'piscis.networks']
